[package]
name = "rufutex"
version = "0.3.0"
edition = "2021"
authors = ["Yangosoft", "Yangosoft <-@-.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yangosoft/rufutex"
keywords = ["futex", "Linux", "mutex", "ulrich-drepper"]
description = "Ulrich Drepper's mutex using futex implementation in Rust"

[dependencies]
libc = "0.2"
log = "0.4"
rushm = "0.2"

[lib]
name = "rufutex"
path = "src/lib.rs"


[[example]]
name = "rufutex-example"
path = "examples/rufutex-example.rs"